sync_daily.log
file:///Users/maxi.moff/APT%20value/web/src/scripts/data-loader/06_daily_sync.js:16
import { fetchWithRetry, getAPITotalCount, API_CONFIG } from './utils/api.js';
         ^^^^^^^^^^^^^^
SyntaxError: The requested module './utils/api.js' does not provide an export named 'fetchWithRetry'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:363:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:669:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.5.0
